💄 style: Adapt newest docs proposal by UX team
Signed-off-by: Eduard Itrich <eduard.itrich@porsche.de>
on-behalf-of: @porscheofficial <open_source_office@porsche.de>

--- a/content/docs/cla.mdx
+++ b/content/docs/cla.mdx
@@ -1,8 +1,8 @@
 ---
 title: Contributor License Agreement
 date: 2023-08-02
-image: /assets/heroImage.png
-descriptionShort: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
+image: /assets/heroImage2.png
+descriptionShort: How you can contribute to our open-source projects
 ---
 
 Thank you for your interest in contributing to an open source software project
