--- a/content/docs/contributing.mdx
+++ b/content/docs/contributing.mdx
@@ -2,10 +2,8 @@
 title: Contributing Upstream
 date: 2023-08-02
 image: /assets/heroImage2.png
-descriptionShort: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
+descriptionShort: How we contribute to open-source projects
 ---
-
-
 
 ## How we contribute to open-source projects
 
