--- a/content/docs/creating.mdx
+++ b/content/docs/creating.mdx
@@ -1,8 +1,8 @@
 ---
 title: Creating FOSS
 date: 2023-08-02
-image: /assets/heroImage3.png
-descriptionShort: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
+image: /assets/heroImage2.png
+descriptionShort: How we publish and manage new open-source projects
 ---
 
 ## How we manage new open-source projects
