📝 Add tooling to FOSS Compliance principle
Signed-off-by: Eduard Itrich <eduard.itrich@porsche.de>
on-behalf-of: @porscheofficial <open_source_office@porsche.de>

--- a/content/static/FOSS_MOVEMENT.mdx
+++ b/content/static/FOSS_MOVEMENT.mdx
@@ -72,7 +72,6 @@
   </Principle>
   <Principle hashtag="FOSS Compliance">
     An employee should be encouraged and empowered to use FOSS and contribute to
-    upstream projects by being provided with lean but compliant processes.
+    upstream projects by being provided with lean but compliant processes and tooling.
   </Principle>
 </KeyValue>
-
