Rename FOSS prefer to FOSS First
Signed-off-by: Eduard Itrich <eduard.itrich@porsche.de>
on-behalf-of: @porscheofficial <open_source_office@porsche.de>

--- a/content/static/FOSS_MOVEMENT.mdx
+++ b/content/static/FOSS_MOVEMENT.mdx
@@ -15,7 +15,7 @@
     Porsche empowers their employees to dedicate time for participating in FOSS
     activities.
   </Principle>
-  <Principle hashtag="FOSS prefer">
+  <Principle hashtag="FOSS First">
     An employee should evaluate open and inner-source software before deciding
     for commercial software.
   </Principle>
