Remove unwanted paragraph from headline
Signed-off-by: Eduard Itrich <eduard.itrich@porsche.de>
on-behalf-of: @porscheofficial <open_source_office@porsche.de>

--- a/content/static/FOSS_MOVEMENT.mdx
+++ b/content/static/FOSS_MOVEMENT.mdx
@@ -4,9 +4,7 @@
   align="center"
   size="small"
   className={"keyvalues"}
->
-  Our Key Values and Principles
-</PDisplay>
+>Our Key Values and Principles</PDisplay>
 
 <KeyValue
   text="Move from #commercial-software to #free-open-source-software, wherever possible"
