Add images for ORT story
Signed-off-by: Eduard Itrich <eduard.itrich@porsche.de>
on-behalf-of: @porscheofficial <open_source_office@porsche.de>

--- a/content/blog/oss-review-toolkit.mdx
+++ b/content/blog/oss-review-toolkit.mdx
@@ -74,7 +74,7 @@ readTime: 5min
 </Section>
 
 
-<ImageText imageSrc="/assets/blog/ort/3.jpg" imageAlt="Porsche Stuttgart - Production Zuffenhausen: Paint shop Taycan"
+<ImageText imageSrc="/assets/blog/ort/2.jpg" imageAlt="Photo by Arnold Francisca on Unsplash"
     title="By contributing to the OSS Review Toolkit, the Open Source Office made a big step ahead in Porsche’s FOSS movement. What was the initial motivation to take this path? Why have you chosen to collaborate with an open-source community rather than buying a commercial solution?">
     As the Porsche Open Source Office we always wanted to lead by example and prove
     the collaboration model that open-source communities offer to share knowledge
@@ -86,7 +86,7 @@ readTime: 5min
     utilized by the entire company and all respective subsidiaries.
 </ImageText>
 
-<ImageText imageSrc="/assets/blog/ort/4.jpg" imageAlt="Porsche Stuttgart - Production Zuffenhausen: Crest Taycan" left
+<ImageText imageSrc="/assets/blog/ort/3.jpg" imageAlt="Taycan Turbo S, light painting by 'Lumenman' Bernhard Rauscher, 2019, Porsche AG" left
     title="With a glimpse into the future: What are your further plans regarding FOSS Contributions? Who would you like to see next joining our FOSS Contributor community?">
     The Porsche Open Source Office is currently developing central platforms that
     are based on open-source technologies such as the FOSS Hub portal and Data
