Fix missing OpenGraph description
Signed-off-by: Eduard Itrich <eduard.itrich@porsche.de>
on-behalf-of: @porscheofficial <open_source_office@porsche.de>

--- a/content/blog/oss-review-toolkit.mdx
+++ b/content/blog/oss-review-toolkit.mdx
@@ -2,21 +2,10 @@
 title: OSS Review Toolkit
 date: 2023-11-03
 image: /assets/blog/ort/hero.jpg
-descriptionShort: |
-    In this contributor story, the Open Source Office (OSO) at Porsche AG explains
-    why it has chosen OSS Review Toolkit (ORT) as their technical foundation for
-    all in-house developed initiatives and why they preferred to collaborate with
-    the community rather than buying a commercial solution.
+descriptionShort: In this contributor story, the Open Source Office (OSO) at Porsche AG explains why it has chosen OSS Review Toolkit (ORT) as their technical foundation for all in-house developed initiatives and why they preferred to collaborate with the community rather than buying a commercial solution.
 author:
   name: OSS Review Toolkit (ORT)
-  description: |
-    The OSS Review Toolkit (ORT) is a Free and Open Source Software (FOSS) orchestration
-    toolkit to – among other features – manage open-source software dependencies and
-    ensure compliance with a configurable set of policies. Initially founded by multiple
-    companies and later donated to the Linux Foundation, the open-source project quickly
-    gained track among the FOSS community. A growing number of companies, such as HERE
-    Technologies, BMW or Deutsche Telekom Systems are evaluating or already implemented
-    ORT within their FOSS compliance process.
+  description: The OSS Review Toolkit (ORT) is a Free and Open Source Software (FOSS) orchestration toolkit to – among other features – manage open-source software dependencies and ensure compliance with a configurable set of policies. Initially founded by multiple companies and later donated to the Linux Foundation, the open-source project quickly gained track among the FOSS community. A growing number of companies, such as HERE Technologies, BMW or Deutsche Telekom Systems are evaluating or already implemented ORT within their FOSS compliance process.
   image: https://raw.githubusercontent.com/oss-review-toolkit/ort/main/logos/logo.png
   slug: https://oss-review-toolkit.org/ort/
 readTime: 5min
