Add theme option to MDX content
Signed-off-by: Eduard Itrich <eduard.itrich@porsche.de>
on-behalf-of: @porscheofficial <open_source_office@porsche.de>

--- a/content/blog/oss-review-toolkit.mdx
+++ b/content/blog/oss-review-toolkit.mdx
@@ -11,7 +11,7 @@ author:
 readTime: 5min
 ---
 
-<ImageText imageSrc="/assets/blog/ort/1.jpg" imageAlt="Taycan, 2021, Porsche AG" left
+<ImageText imageSrc="/assets/blog/ort/1.jpg" imageAlt="Taycan, 2021, Porsche AG" theme="light" left
     title="How would you explain the OSS Review Toolkit project to a five-year-old? What problem does it solve for Porsche?">
     Like the ingredients list on food that allows customers to make a conscious
     decision on what they can or want to eat, we as a company need to know
@@ -33,7 +33,7 @@ readTime: 5min
     with.
 </ImageText>
 
-<Section spacing="xxl">
+<Section spacing="xl">
     <Textblock>
     **What is ORT?** OSS Review Toolkit (ORT) is an orchestration toolkit that helps
     the Porsche AG OSO to connect with product source code repositories which allows
@@ -63,7 +63,7 @@ readTime: 5min
 </Section>
 
 
-<ImageText imageSrc="/assets/blog/ort/2.jpg" imageAlt="Photo by Arnold Francisca on Unsplash"
+<ImageText imageSrc="/assets/blog/ort/2.jpg" imageAlt="Photo by Arnold Francisca on Unsplash" theme="light"
     title="By contributing to the OSS Review Toolkit, the Open Source Office made a big step ahead in Porsche’s FOSS movement. What was the initial motivation to take this path? Why have you chosen to collaborate with an open-source community rather than buying a commercial solution?">
     As the Porsche Open Source Office we always wanted to lead by example and prove
     the collaboration model that open-source communities offer to share knowledge
@@ -75,7 +75,7 @@ readTime: 5min
     utilized by the entire company and all respective subsidiaries.
 </ImageText>
 
-<ImageText imageSrc="/assets/blog/ort/3.jpg" imageAlt="Taycan Turbo S, light painting by 'Lumenman' Bernhard Rauscher, 2019, Porsche AG" left
+<ImageText imageSrc="/assets/blog/ort/3.jpg" imageAlt="Taycan Turbo S, light painting by 'Lumenman' Bernhard Rauscher, 2019, Porsche AG" theme="light" left
     title="With a glimpse into the future: What are your further plans regarding FOSS Contributions? Who would you like to see next joining our FOSS Contributor community?">
     The Porsche Open Source Office is currently developing central platforms that
     are based on open-source technologies such as the FOSS Hub portal and Data
