--- a/content/blog/porsche-design-system.mdx
+++ b/content/blog/porsche-design-system.mdx
@@ -11,7 +11,7 @@ author:
 readTime: 5min
 ---
 
-<ImageText imageSrc="/assets/blog/pds/1.jpg" imageAlt="Marcel Bertram"
+<ImageText imageSrc="/assets/blog/pds/1.jpg" imageAlt="Marcel Bertram" theme="light"
     title="Tell us a little more about yourself, your role at Porsche and what topics drive you.">
     Being part of the company for more than twelve years, I had the opportunity
     to be part of the very first agile product teams at Porsche. During my
@@ -23,7 +23,7 @@ readTime: 5min
     all our digital touchpoints.
 </ImageText>
 
-<ImageText imageSrc="/assets/blog/pds/2.jpg" imageAlt="Marcel Bertram" left
+<ImageText imageSrc="/assets/blog/pds/2.jpg" imageAlt="Marcel Bertram" theme="light" left
     title="You are currently maintaining Porsche's open-source project Porsche Design System on GitHub. How would you explain your project to a five-year-old? What problem does your project solve for Porsche?">
     The Porsche Design System is comparable to a Lego set that offers
     ready-to-use building blocks (coded and designed components) and a clear
@@ -32,8 +32,9 @@ readTime: 5min
     applications. By supporting multiple popular frameworks such as React,
     Angular and Vue, continuously testing for compatibility with a wide
     range of browsers and creating a growing set of re-usable components, we
-    made a huge step ahead in the industry, which I am still proud of. Our
-    design system unlocks capacities among all Porsche design and
+    made a huge step ahead in the industry, which I am still proud of.
+    
+    Our design system unlocks capacities among all Porsche design and
     development teams that otherwise would have to reinvent the wheel by
     adapting, implementing, and verifying the design guide on their own –
     multiplied by all our available teams. We have an extremely high
@@ -42,7 +43,7 @@ readTime: 5min
     single system we can collectively optimize.
 </ImageText>
 
-<ImageText imageSrc="/assets/blog/pds/3.jpg" imageAlt="Marcel Bertram"
+<ImageText imageSrc="/assets/blog/pds/3.jpg" imageAlt="Marcel Bertram" theme="light"
     title="By publishing the Porsche Design System as an open-source project, you have made a big step ahead in our FOSS movement. What was your initial motivation to take this path? Can you tell us why you have chosen to release your project on GitHub?">
     There are several reasons why we agreed on open sourcing the Porsche
     Design System. We wanted to drastically lower the barrier to access and
@@ -65,7 +66,7 @@ readTime: 5min
     are doing.
 </ImageText>
 
-<ImageText imageSrc="/assets/blog/pds/4.jpg" imageAlt="Marcel Bertram" left
+<ImageText imageSrc="/assets/blog/pds/4.jpg" imageAlt="Marcel Bertram" theme="light" left
     title="What did you learn along the way? What were the benefits of this strategy for you, your team and Porsche?">
     Publishing the Porsche Design System under a free and open license simplified a
     lot of things for us. Not only did we reduce the complexity of access
@@ -85,7 +86,7 @@ readTime: 5min
     our field.
 </ImageText>
 
-<ImageText imageSrc="/assets/blog/pds/5.jpg" imageAlt="Marcel Bertram"
+<ImageText imageSrc="/assets/blog/pds/5.jpg" imageAlt="Marcel Bertram" theme="light"
     title="With a glimpse into the future: What are your further plans regarding FOSS Contributions? Who would you like to see next joining our FOSS Contributor community?">
     We already discussed the idea of generalizing the Porsche Design System.
     Currently, PDS is limited to creating Porsche-branded applications. In
