Adjust legal notice to new board members
Signed-off-by: Eduard Itrich <eduard.itrich@porsche.de>
on-behalf-of: @porscheofficial <open_source_office@porsche.de>

--- a/content/static/LEGAL_NOTICE.mdx
+++ b/content/static/LEGAL_NOTICE.mdx
@@ -10,10 +10,11 @@ E-Mail: [info@porsche.de](mailto:info@porsche.de)
 represented by the Executive Board:  
 Oliver Blume, Chairperson  
 Lutz Meschke, Deputy Chairperson  
+Barbara Frenkel  
 Andreas Haffner  
+Sajjad Khan  
 Detlev von Platen  
 Albrecht Reimold  
-Barbara Frenkel  
 Michael Steiner  
 
 Registry court: District Court Stuttgart  
