Finalize PDC blog post
Signed-off-by: Eduard Itrich <eduard.itrich@porsche.de>
on-behalf-of: @porscheofficial <open_source_office@porsche.de>

--- a/content/blog/porsche-digital-campus.mdx
+++ b/content/blog/porsche-digital-campus.mdx
@@ -1,7 +1,7 @@
 ---
 title: Research @ Porsche Digital Campus
 date: 2023-12-18
-image: https://uploads-ssl.webflow.com/6419a4c2c9609e21b02a47e8/6490241517bde34df6f4cdc7_section1-campus-2.jpg
+image: /assets/blog/pdc/hero.jpg
 descriptionShort: The Porsche Digital Campus is an innovative initiative with the goal of bringing together research and real-world application in the fields of AI, machine learning, and data science.
 author:
   name: Porsche Digital Campus
@@ -11,14 +11,14 @@ author:
 readTime: 5min
 ---
 
-<ImageText imageSrc="https://uploads-ssl.webflow.com/6419a4c2c9609e21b02a47e8/6490241517bde34df6f4cdc7_section1-campus-2.jpg" imageAlt="Porsche Digital Campus" theme="light"
+<ImageText imageSrc="/assets/blog/pdc/1.jpg" imageAlt="Porsche Digital Campus" theme="light"
     title="Tell us a little more about yourself, your role at Porsche Digital and what topics drive you. ">
     We are the research team and part of the Porsche Digital Campus: An
     international group of software technology experts with a clear focus on the
     application of artificial intelligence as well quantum computing. 
 </ImageText>
 
-<ImageText imageSrc="https://uploads-ssl.webflow.com/6419a4c2c9609e21b02a47e8/6490241517bde34df6f4cdc7_section1-campus-2.jpg" imageAlt="Porsche Digital Campus" theme="light" left
+<ImageText imageSrc="/assets/blog/pdc/1.png" imageAlt="Porsche Digital Campus" theme="light" left
     title="Porsche Digital has published several research projects in the field of artificial intelligence on GitHub. How would you explain these projects to a five-year-old? What problem do these projects solve for Porsche?">
     For the first project, “Using deep learning to construct stochastic local
     search SAT solvers with performance bounds”, imagine you have a tricky
@@ -47,7 +47,7 @@ readTime: 5min
     This new camera is easy to use and can be made even smarter in the future!
 </ImageText>
 
-<ImageText imageSrc="https://uploads-ssl.webflow.com/6419a4c2c9609e21b02a47e8/6490241517bde34df6f4cdc7_section1-campus-2.jpg" imageAlt="Porsche Digital Campus" theme="light"
+<ImageText imageSrc="/assets/blog/pdc/2.png" imageAlt="Porsche Digital Campus" theme="light"
     title="By publishing AI research projects as open-source projects, you’ve made a big step ahead in our FOSS movement. What was your initial motivation to take this path? Can you tell us why you’ve chosen to release your project on GitHub?">
     Today, providing the code and data necessary to reproduce the results
     presented in a research paper is a necessary requirement for scientific
@@ -57,7 +57,7 @@ readTime: 5min
     perfect place to do so.
 </ImageText>
 
-<ImageText imageSrc="https://uploads-ssl.webflow.com/6419a4c2c9609e21b02a47e8/6490241517bde34df6f4cdc7_section1-campus-2.jpg" imageAlt="Porsche Digital Campus" theme="light" left
+<ImageText imageSrc="/assets/blog/pdc/3.png" imageAlt="Porsche Digital Campus" theme="light" left
     title="What did you learn along the way? What were the benefits of this strategy for you, your team and Porsche Digital?">
     We were very keen to see the results of the research. Knowing that we would
     make the code public was exciting and the team paid even more attention to
@@ -66,7 +66,7 @@ readTime: 5min
     hence the progress of the whole project.
 </ImageText>
 
-<ImageText imageSrc="https://uploads-ssl.webflow.com/6419a4c2c9609e21b02a47e8/6490241517bde34df6f4cdc7_section1-campus-2.jpg" imageAlt="Porsche Digital Campus" theme="light"
+<ImageText imageSrc="/assets/blog/pdc/4.png" imageAlt="Porsche Digital Campus" theme="light"
     title="With a glimpse into the future: What are your further plans regarding FOSS Contributions? Who would you like to see next joining our FOSS Contributor community?">
     Publishing on GitHub will become the new default way of making the code for
     studies available alongside academic publications. So, keep your eyes
