Rename first image in order to not have it overwritten
Signed-off-by: Eduard Itrich <eduard.itrich@porsche.de>
on-behalf-of: @porscheofficial <open_source_office@porsche.de>

--- a/content/blog/porsche-digital-campus.mdx
+++ b/content/blog/porsche-digital-campus.mdx
@@ -11,7 +11,7 @@ author:
 readTime: 5min
 ---
 
-<ImageText imageSrc="/assets/blog/pdc/1.jpg" imageAlt="Porsche Digital Campus" theme="light"
+<ImageText imageSrc="/assets/blog/pdc/team.jpg" imageAlt="Porsche Digital Campus" theme="light"
     title="Tell us a little more about yourself, your role at Porsche Digital and what topics drive you. ">
     We are the research team and part of the Porsche Digital Campus: An
     international group of software technology experts with a clear focus on the
