--- a/content/blog/porsche-digital-campus.mdx
+++ b/content/blog/porsche-digital-campus.mdx
@@ -20,7 +20,7 @@ readTime: 5min
 
 <ImageText imageSrc="/assets/blog/pdc/1.png" imageAlt="Porsche Digital Campus" theme="light" left
     title="Porsche Digital has published several research projects in the field of artificial intelligence on GitHub. How would you explain these projects to a five-year-old? What problem do these projects solve for Porsche?">
-    For the first project, “Using deep learning to construct stochastic local
+    For the [first project](https://github.com/porscheofficial/sls_sat_solving_with_deep_learning), “Using deep learning to construct stochastic local
     search SAT solvers with performance bounds”, imagine you have a tricky
     puzzle. Computers have a special friend, like a magical helper, that helps
     them solve these puzzles faster and better! We built a magical helper that
@@ -29,7 +29,7 @@ readTime: 5min
     puzzles in less time! It’s like having a super-smart friend to help you with
     your games!  
 
-    For the second project, “Distribution and volume based scoring for Isolation
+    For the [second project](https://github.com/porscheofficial/distribution_and_volume_based_isolation_forest), “Distribution and volume based scoring for Isolation
     Forest’, imagine you have a super-smart robot that can find which toys are
     different from the others. We made this robot even smarter! The team taught it a
     new way to look at all the toys and find the different ones more accurately. We
@@ -37,7 +37,7 @@ readTime: 5min
     different ones even better than before! So, it’s like having an upgraded robot
     friend who’s really good at finding unique toys! 
  
-    For the third project, “FARSEC: A Reproducible Framework for Automatic Real-Time
+    For the [third project](https://github.com/porscheofficial/speed-estimation-traffic-monitoring), “FARSEC: A Reproducible Framework for Automatic Real-Time
     Vehicle Speed Estimation Using Traffic Cameras”, imagine you have a smart camera
     that can watch cars and see how fast they are going. This is important to help
     cars move smoothly on the road and to keep everyone safe. Some smart cameras are
@@ -53,8 +53,8 @@ readTime: 5min
     presented in a research paper is a necessary requirement for scientific
     credibility. So being able to make our code available alongside our
     publications is absolute key to establishing that our work is as credible as
-    that of academic institutions. Porsche’s official GitHub organization is the
-    perfect place to do so.
+    that of academic institutions. Porsche’s official [GitHub organization](https://github.com/porscheofficial)
+    is the perfect place to do so.
 </ImageText>
 
 <ImageText imageSrc="/assets/blog/pdc/3.png" imageAlt="Porsche Digital Campus" theme="light" left
