Add latest changes on AOSP interview
Signed-off-by: Eduard Itrich <eduard.itrich@porsche.de>
on-behalf-of: @porscheofficial <open_source_office@porsche.de>

--- a/content/blog/android-open-source.mdx
+++ b/content/blog/android-open-source.mdx
@@ -13,11 +13,10 @@ readTime: 5min
 
 <ImageText imageSrc="/assets/blog/aosp/1.jpg" imageAlt="Macan, 2024, Porsche AG" theme="light" left
     title="Tell us a little more about yourself, your role at Porsche and what topics drive you.">
-    I am a solution architect with a solid background in software engineering. Since
-    more than one year, I am part of the Infotainment & Connect (CIU) team that
-    leads the Android development at Porsche. I am passionate about breaking new
-    ground, building vibrant, user-centric features, and increasing the overall
-    driver experience. 
+    I am a solution architect with a solid background in software engineering. From
+    2021, I am part of the Android Automotive development team at Porsche. I am
+    passionate about breaking new ground, building vibrant, user-centric features,
+    and increasing the overall driver experience. 
 </ImageText>
 
 <ImageText imageSrc="/assets/blog/aosp/2.jpg" imageAlt="Macan, 2024, Porsche AG" theme="light"
@@ -27,16 +26,15 @@ readTime: 5min
     foundation for nowadays around 70% of all smartphones, has quickly evolved to a
     Swiss army knife that powers watches, televisions, and car infotainment systems.
 
-    Porsche is integrating Android with the help of our Tier 2 and Tier 1 suppliers
-    into the new HCP3 control unit. By building upon a well-proven and established
-    open platform, we have significantly reduced the pain of having to integrate
-    proprietary solutions being sold as a black box to Porsche. The freedom to
-    analyze and modify the source code allows us to confirm issues and request
-    changes that meet our requirements at Porsche. It is also worth noting, that the
-    prospering ecosystem around the Android open-source project offers us the
+    Porsche is integrating Android Automotive OS (AAOS) with the help of our Tier 2
+    and Tier 1 suppliers into our future infotainment control units. By building upon a
+    well-proven and established open platform, we have significantly reduced the pain of
+    having to integrate proprietary solutions being sold as a black box to Porsche.
+    The freedom to analyze and modify the source code allows us to confirm issues and
+    request changes that meet our requirements at Porsche. It is also worth noting,
+    that the prospering ecosystem around the Android open-source project offers us the
     ability to easily find new talents and seek help from a global community of
     technology leaders.
-
 </ImageText>
 
 <ImageText imageSrc="/assets/blog/aosp/3.jpg" imageAlt="Macan, 2024, Porsche AG" theme="light" left
