Adjust wording based on feedback from @pboeder
Signed-off-by: Eduard Itrich <eduard.itrich@porsche.de>
on-behalf-of: @porscheofficial <open_source_office@porsche.de>

--- a/content/blog/cookie-consent-banner.mdx
+++ b/content/blog/cookie-consent-banner.mdx
@@ -39,15 +39,14 @@ readTime: 5min
 
     **Patrick:** I'm sure everybody remembers the time when cookie banners hit the
     internet. It's not only cumbersome for the visitors of a website but also for
-    the maintainers to implement such a solution. But it makes sense, informing the
-    user's what is going on with their data. So we created a component that is not
+    the maintainers to implement such a solution. So we created a component that is not
     only informative to the visitors of a website, but also easy to integrate for
     the product teams. It should be as straightforward as possible to integrate
     third-party scripts and cookies into a website in a privacy-friendly manner,
     always respecting the decision of the visitor. That's why the component doesn't
     do any magical gatekeeping of such scripts, but instead making it very
     convenient for the developer to get to know the information about the consent of
-    the visitor. The developers should have total control over what's going on the
+    the visitor. The developers should have total control over what's happening on the
     website and which scripts are being loaded.  
     <br/>
     **Tim:** In innovation projects, we work in a particularly agile manner and in
