🍱 feat: add blog image assets cookie banner story

--- a/content/blog/cookie-consent-banner.mdx
+++ b/content/blog/cookie-consent-banner.mdx
@@ -12,7 +12,7 @@ author:
 readTime: 5min
 ---
 
-<ImageText imageSrc="/assets/blog/pdc/team.jpg" imageAlt="Porsche Digital Campus" theme="light"
+<ImageText imageSrc="/assets/blog/ccb/3.png" imageAlt="The Open Source Maintainers, co-working on a laptop" theme="light"
     title="Tell us a little more about yourself, your role at Porsche and what topics drive you.">
 
     **Tim (Web Developer Customer Innovation / Physical Products):** I'm passionate
@@ -34,7 +34,7 @@ readTime: 5min
 
 </ImageText>
 
-<ImageText imageSrc="/assets/blog/ccb/1.png" imageAlt="Porsche Digital Campus" theme="light" left
+<ImageText imageSrc="/assets/blog/ccb/1.png" imageAlt="Collection of websites using the cookie banner" theme="light" left
     title="You are currently maintaining Porsche's open-source project Cookie Consent Banner on GitHub. How would you explain your project to a five-year-old? What problem does your project solve for Porsche?">
 
     **Patrick:** I'm sure everybody remembers the time when cookie banners hit the
@@ -56,7 +56,7 @@ readTime: 5min
     minimal effort.
 </ImageText>
 
-<ImageText imageSrc="/assets/blog/ccb/2.jpg" imageAlt="Porsche Digital Campus" theme="light"
+<ImageText imageSrc="/assets/blog/ccb/2.jpg" imageAlt="Chart showing weekly downloads of the Cookie Consent Banner" theme="light"
     title="With over 3000 weekly downloads your project already gained some adoption among the community. What did you learn along the way of maintaining an open-source project?">
 
     **Patrick:** The component should be easy to use, thus we need to ensure a
@@ -82,7 +82,7 @@ readTime: 5min
     source.
 </ImageText>
 
-<ImageText imageSrc="/assets/blog/pdc/3.png" imageAlt="Porsche Digital Campus" theme="light" left
+<ImageText imageSrc="/assets/blog/ccb/4.png" imageAlt="The Open Source Maintainers, discussing in the office" theme="light" left
     title="It's great to see how the Cookie Consent Banner was able to attract a decent community around the project. Are there specific reasons why you decided to publish this component under a FOSS license?">
 
     Contributing is never a zero-sum game. The return is always greater than the
