♻️ refactor: refactor Blog Hero to support art directed image

--- a/content/blog/android-open-source.mdx
+++ b/content/blog/android-open-source.mdx
@@ -1,7 +1,9 @@
 ---
 title: Android Open Source Project
 date: 2024-02-19
-image: /assets/blog/aosp/hero.jpg
+image: 
+  base: /assets/blog/aosp/hero.jpg
+  minWidthM: /assets/blog/aosp/heroL.jpg
 descriptionShort: The new-generation infotainment system in the Macan is based on Android Automotive OS. In this contributor story, Michael Eichler highlights the benefits of building upon a well-proven and established open-source platform instead of having to reinvent the wheel.
 author:
   name: Android Open Source Project
