--- a/content/blog/oss-review-toolkit.mdx
+++ b/content/blog/oss-review-toolkit.mdx
@@ -1,7 +1,8 @@
 ---
 title: OSS Review Toolkit
 date: 2023-11-03
-image: /assets/blog/ort/hero.jpg
+image: 
+  base: /assets/blog/ort/hero.jpg
 descriptionShort: In this contributor story, the Open Source Office (OSO) at Porsche AG explains why it has chosen OSS Review Toolkit (ORT) as their core service for all in-house developed initiatives and why they preferred to collaborate with the community rather than buying a commercial solution.
 author:
   name: OSS Review Toolkit (ORT)
