--- a/content/blog/porsche-design-system.mdx
+++ b/content/blog/porsche-design-system.mdx
@@ -1,7 +1,8 @@
 ---
 title: Porsche Design System
 date: 2023-08-30
-image: /assets/blog/pds/hero.jpg
+image: 
+  base: /assets/blog/pds/hero.jpg
 descriptionShort: The Porsche Design System provides all the fundamental UXI guidelines and pattern-based web components to build brand driven, consistent and intuitive designs for digital Porsche products. Marcel Bertram, Specialist Digital Marketing UI/UX at Porsche, explains why this project was published as an open-source project and what his team learned along this way.
 author:
   name: Porsche Design System
