--- a/content/blog/porsche-digital-campus.mdx
+++ b/content/blog/porsche-digital-campus.mdx
@@ -1,7 +1,8 @@
 ---
 title: Research @ Porsche Digital Campus
 date: 2023-12-18
-image: /assets/blog/pdc/hero.jpg
+image: 
+  base: /assets/blog/pdc/hero.jpg
 descriptionShort: The Porsche Digital Campus is an innovative initiative with the goal of bringing together research and real-world application in the fields of AI, machine learning, and data science.
 author:
   name: Porsche Digital Campus
