Enable ArtDirection feature for CCB story
Signed-off-by: Eduard Itrich <eduard.itrich@porsche.de>
on-behalf-of: @porscheofficial <open_source_office@porsche.de>

--- a/content/blog/cookie-consent-banner.mdx
+++ b/content/blog/cookie-consent-banner.mdx
@@ -1,8 +1,12 @@
 ---
 title: Cookie Consent Banner
 date: 2024-05-08
-image: /assets/blog/ccb/preview.png
-hero: /assets/blog/ccb/hero.png
+image: 
+  base: /assets/blog/ccb/preview.png
+  minWidthM: /assets/blog/ccb/preview.png
+hero:
+  base: /assets/blog/ccb/hero.png
+  minWidthM: /assets/blog/ccb/hero.png
 descriptionShort: The Cookie Consent Banner is one of the very first FOSS projects published by Porsche back in 2021. In this Contributor Story, the two maintainers Tim and Patrick share what they have learnt over the past three years and how they managed to keep an eye on the needs of the community.
 author:
   name: Cookie Consent Banner
