Add newlines to legal and privacy notice
Signed-off-by: Eduard Itrich <eduard.itrich@porsche.de>
on-behalf-of: @porscheofficial <open_source_office@porsche.de>

--- a/content/static/LEGAL_NOTICE.mdx
+++ b/content/static/LEGAL_NOTICE.mdx
@@ -3,9 +3,11 @@
 **Dr. Ing. h.c. F. Porsche AG**  
 Porscheplatz 1  
 D-70435 Stuttgart  
+<br />
 
+E-Mail: [info@porsche.de](mailto:info@porsche.de)  
 Tel: (+49) 0711 911-0  
-E-Mail: [info@porsche.de](mailto:info@porsche.de)   
+<br />
 
 represented by the Executive Board:  
 Oliver Blume, Chairperson  
@@ -16,6 +18,7 @@ Sajjad Khan
 Detlev von Platen  
 Albrecht Reimold  
 Michael Steiner  
+<br />
 
 Registry court: District Court Stuttgart  
 HRB No. 730623  
@@ -23,7 +26,7 @@ VAT ID No. DE 147 799 625
 
 ### Consumer information in accordance with the German Consumer Dispute Resolution Act
 
-The Dr. Ing. H.c. F. Porsche AG is not willing and not obliged to participate in
+The Dr. Ing. h.c. F. Porsche AG is not willing and not obliged to participate in
 a dispute settlement procedure before a consumer arbitration board.
 
 ### Legal notice
@@ -34,6 +37,7 @@ law and, where applicable, other intellectual property rights. The proprietary
 content of this website may not be duplicated, distributed, reproduced, made
 publicly accessible or otherwise used without the prior consent of the right
 holder.
+<br />
 
 We reserve the right to change design, equipment and delivery specifications as
 well as vary colours.
