Fix links to @AOEpeople Tech Radar and corresponding repository
Signed-off-by: Eduard Itrich <eduard.itrich@porsche.de>
on-behalf-of: @porscheofficial <open_source_office@porsche.de>

--- a/content/blog/tech-radar.mdx
+++ b/content/blog/tech-radar.mdx
@@ -44,10 +44,10 @@ readTime: 5min
     conflicting categorizations of technologies. This lack of a unified view drove
     us to look for a better solution.
 
-    While searching for an effective tool, I stumbled upon [AOE’s Technology Radar](https://github.com/AOEpeople/aoe_technology_radar),
+    While searching for an effective tool, I stumbled upon [AOE’s Technology Radar](https://www.aoe.com/techradar/),
     which they use to display their technologies. This tool was interactive, detailed, and
     not overwhelming, hitting the perfect balance we were looking for. AOE had also
-    made this Technology Radar available as an open-source framework, which was a perfect
+    made this Technology Radar [available as an open-source framework](https://github.com/AOEpeople/aoe_technology_radar), which was a perfect
     fit for our needs.
 
 </ImageText>
