Finalize blog post on Tech Radar

--- a/content/blog/tech-radar.mdx
+++ b/content/blog/tech-radar.mdx
@@ -2,7 +2,7 @@
 title: Technology Radar
 date: 2024-12-20
 image: /assets/blog/techradar/hero.jpg
-descriptionShort: In this interview, Patrice Bouillet discusses the journey of the Technology Radar project at Porsche Digital and highlights the role of internal collaboration, the contributions back to the upstream project by AOE, and the enthusiasm of other colleagues in driving this project forward.
+descriptionShort: In this interview, Patrice Bouillet discusses the journey of the Technology Radar project at Porsche Digital and highlights the role of internal collaboration, the contributions back to the upstream project by AOE Group, a coalition of multiple digital service providers located in Europe, and the enthusiasm of other colleagues in driving this project forward.
 author:
   name: Technology Radar
   description: A static site generator for a full featured Technology Radar with Quadrants, Rings, Dashboard, Radar Visualization, Item History, Search etc..
@@ -32,6 +32,16 @@ readTime: 5min
     technologies, it allows for a collaborative review of what is being utilized and
     the benefits it brings, fostering a culture of sharing and learning from each
     other’s experiences.
+    <br/>
+    Think of the Technology Radar as a compass that guides us through the ever-growing complexity of IT software development.
+    This tool offers numerous benefits for our engineers and IT architects at Porsche Digital:
+    - It fosters a culture where teams are encouraged to experiment with new technologies and methods.
+      By sharing the knowledge gained internally, our teams can learn from each other's experiences,
+      helping us stay competitive in the fast-changing IT landscape.
+    - It reduces technical debt and friction between teams by streamlining the technologies we use. 
+    This is essential for enhancing efficiency and boosting collaboration across different teams.
+    
+    While the Technology Radar is just a tool, its true value lies in the discussions it sparks among different ARTs and teams. By jointly assessing technologies, we create a shared understanding of the direction we want to evolve in.
 </ImageText>
 
 <ImageText imageSrc="/assets/blog/techradar/3.jpg" imageAlt="Patrice Bouillet in front of a screen presenting the Technology Radar and discussing with his team" theme="light"
@@ -75,7 +85,7 @@ readTime: 5min
     One of the key learnings from this project is the incredible spirit of
     collaboration and innovation within Porsche Digital. There was a strong drive to
     find solutions that benefit everyone. The enthusiasm and support from colleagues
-    like Patrick were instrumental in pushing this project forward.
+    were instrumental in pushing this project forward.
 
     We now have multiple instances of the Technology Raider running, with at least three
     or four different departments adopting it. This tool has become a powerful asset
