--- a/content/blog/tech-radar.mdx
+++ b/content/blog/tech-radar.mdx
@@ -30,8 +30,7 @@ readTime: 5min
     overview of the technologies in use, thus ensuring that everyone is on the same
     page and promoting efficiency. While it doesn't force any team to adopt specific
     technologies, it allows for a collaborative review of what is being utilized and
-    the benefits it brings, fostering a culture of sharing and learning from each
-    other’s experiences.
+    the benefits it brings.
     <br/>
     Think of the Technology Radar as a compass that guides us through the ever-growing complexity of IT software development.
     This tool offers numerous benefits for our engineers and IT architects at Porsche Digital:
@@ -39,7 +38,7 @@ readTime: 5min
       By sharing the knowledge gained internally, our teams can learn from each other's experiences,
       helping us stay competitive in the fast-changing IT landscape.
     - It reduces technical debt and friction between teams by streamlining the technologies we use. 
-    This is essential for enhancing efficiency and boosting collaboration across different teams.
+      This is essential, as said, for enhancing efficiency and boosting collaboration across different teams.
     
     While the Technology Radar is just a tool, its true value lies in the discussions it sparks among different ARTs and teams. By jointly assessing technologies, we create a shared understanding of the direction we want to evolve in.
 </ImageText>
